--- a/foryou.html
+++ b/foryou.html
@@ -3,245 +3,233 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Happy Birthday!</title>
+<title>Happy Birthday Aiwa Jailin! 🎉</title>
 <style>
   body {
     margin: 0;
-    font-family: 'Segoe UI', sans-serif;
-    background: #b3d9ff; /* biru lembut */
+    padding: 0;
+    background: linear-gradient(to bottom, #a8dadc, #caf0f8); /* biru lembut */
+    font-family: 'Comic Sans MS', cursive, sans-serif;
     overflow: hidden;
-    color: #333;
-  }
-
-  h1, p {
-    text-align: center;
-    margin: 0.5em;
-  }
-
-  #message {
-    position: absolute;
-    top: 15%;
-    width: 100%;
-    font-size: 1.5em;
-  }
-
-  #lyrics {
-    position: absolute;
-    bottom: 10px;
-    width: 100%;
-    text-align: center;
-    font-size: 1.2em;
-    line-height: 1.5em;
-  }
-
-  .balloon {
-    position: absolute;
-    width: 50px;
-    height: 70px;
-    border-radius: 50%;
-    background: pink;
-    opacity: 0.8;
-    pointer-events: none;
-    animation: floatUp linear infinite;
-  }
-
-  .candle {
-    position: absolute;
-    width: 10px;
-    height: 20px;
-    background: orange;
-    border-radius: 2px;
-    pointer-events: none;
-    animation: floatUp linear infinite;
-  }
-
-  @keyframes floatUp {
-    0% { transform: translateY(100vh) scale(1); opacity: 1; }
-    100% { transform: translateY(-150px) scale(1.2); opacity: 0; }
-  }
-
-  canvas {
-    position: absolute;
-    top: 0;
-    left: 0;
-    pointer-events: none;
-  }
-
-  #startBtn {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 1.5em;
-    padding: 10px 20px;
+    color: #1d3557;
     cursor: pointer;
-    background: #fff;
-    border: 2px solid #333;
-    border-radius: 10px;
   }
-
+  #message {
+    position: fixed;
+    top: 10%;
+    width: 100%;
+    text-align: center;
+    font-size: 2em;
+    color: #1d3557;
+    text-shadow: 1px 1px 5px #fff;
+    pointer-events: none;
+  }
+  #lyrics {
+    position: fixed;
+    top: 50%;
+    width: 100%;
+    text-align: center;
+    font-size: 1.5em;
+    pointer-events: none;
+    text-shadow: 1px 1px 2px #fff;
+  }
+  #startOverlay {
+    position: fixed;
+    top:0; left:0; width:100%; height:100%;
+    background: rgba(0,0,0,0.3);
+    color: #fff;
+    display: flex;
+    justify-content:center;
+    align-items:center;
+    font-size:2em;
+    z-index:1000;
+    text-align:center;
+  }
+  canvas {
+    position: fixed;
+    top:0; left:0;
+    pointer-events:none;
+  }
 </style>
 </head>
 <body>
 
-<div id="message">
-  <h1>Happy Birthday! 🎉</h1>
-  <p>Awak sangat special bagi saya 💖<br>
-  Semoga hubungan kita makin erat dan ke arah yang lebih baik, till Jannah 🙏</p>
-</div>
-
+<div id="startOverlay">Klik mana-mana untuk mula 🎵</div>
+<div id="message"></div>
 <div id="lyrics"></div>
 
-<button id="startBtn">Klik sini untuk mulakan muzik 🎵</button>
-
-<audio id="music" src="CanICallYouTonight.mp3"></audio>
-
-<canvas id="sparkleCanvas"></canvas>
+<audio id="bgMusic" src="CanICallYouTonight.mp3"></audio>
+<canvas id="particleCanvas"></canvas>
 
 <script>
-// Lyric data dengan timing (dalam saat dari start ~0:48)
-const lyricsData = [
-  {time:0, text:"I feel close"},
-  {time:3.5, text:"Well, maybe I'm not, heaven knows"},
-  {time:7, text:"It's a spotlight stuck on the ceiling"},
-  {time:10.5, text:"Why are these the things that I'm feeling?"},
-  {time:14, text:"There's so much time"},
-  {time:16.5, text:"For me to speak up, but I keep quiet"},
-  {time:19.5, text:"I'll complicate the most of the mantra"},
-  {time:23, text:"The power is out and I can't turn the fan on"},
-  {time:27, text:"So can I call you tonight?"},
-  {time:30, text:"I'm trying to make up my mind"},
-  {time:33, text:"Just how I feel"},
-  {time:35.5, text:"Could you tell me what's real?"},
-  {time:38, text:"I hear your voice on the phone"},
-  {time:41, text:"Now I'm no longer alone"},
-  {time:44, text:"Just how I feel"},
-  {time:46.5, text:"Could you tell me what's real anymore?"},
-  {time:49, text:"'Cause I wouldn't know"},
-  {time:52, text:"Voice so low"},
-  {time:54.5, text:"Sneaking around, so it goes"},
-  {time:57, text:"I always try my best to listen"},
-  {time:59.5, text:"Picking up things that I can fidget"},
-  {time:62, text:"Circle speed, pacing around, watching my feet"},
-  {time:65, text:"Batteries drain, I think that I might have to let you go"},
-  {time:69, text:"So can I call you tonight?"},
-  {time:72, text:"I'm trying to make up my mind"},
-  {time:75, text:"Just how I feel"},
-  {time:77.5, text:"Could you tell me what's real?"},
-  {time:80, text:"I hear your voice on the phone"},
-  {time:83, text:"Now I'm no longer alone"},
-  {time:86, text:"Just how I feel"},
-  {time:88.5, text:"Could you tell me what's real anymore?"},
-  {time:91, text:"'Cause I wouldn't know"},
-  {time:94, text:"Don't go, don't go so easy"},
-  {time:96, text:"Don't go, don't go and leave me"},
-  {time:98, text:"Don't go, don't go so easy"},
-  {time:100, text:"Don't go, don't go and leave me"},
-  {time:102, text:"Don't go, don't go so easy"},
-  {time:104, text:"Don't go, don't go and leave me"},
-  {time:106, text:"Don't go, don't go so easy"},
-  {time:108, text:"Don't go, go"},
-  {time:110, text:"So can I call you tonight?"},
-  {time:113, text:"I'm trying to make up my mind"},
-  {time:116, text:"Just how I feel"},
-  {time:118.5, text:"Could you tell me what's real?"},
-  {time:121, text:"I hear your voice on the phone"},
-  {time:124, text:"Now I'm no longer alone"},
-  {time:127, text:"Just how I feel"},
-  {time:129.5, text:"Could you tell me what's real anymore?"},
-  {time:132, text:"'Cause I wouldn't know"}
+// ===== Birthday typing message =====
+const birthdayMessage = "Happy Birthday Aiwa Jailin! 🎉💙\nSemoga hubungan kita makin erat, ke arah yang lebih baik, till Jannah. Semoga Allah sentiasa merahmati dan melindungi awak 💕";
+const messageEl = document.getElementById("message");
+let msgIndex = 0;
+
+function typeMessage() {
+  if (msgIndex < birthdayMessage.length) {
+    if (birthdayMessage[msgIndex] === "\n") messageEl.innerHTML += "<br>";
+    else messageEl.innerHTML += birthdayMessage[msgIndex];
+    msgIndex++;
+    setTimeout(typeMessage, 80);
+  }
+}
+
+// ===== Lyrics syncing =====
+const lyrics = [
+  { time: 48, text: "I feel close" },
+  { time: 51, text: "Well, maybe I'm not, heaven knows" },
+  { time: 55, text: "It's a spotlight stuck on the ceiling" },
+  { time: 59, text: "Why are these the things that I'm feeling?" },
+  { time: 63, text: "There's so much time" },
+  { time: 66, text: "For me to speak up, but I keep quiet" },
+  { time: 70, text: "I'll complicate the most of the mantra" },
+  { time: 73, text: "The power is out and I can't turn the fan on" },
+  { time: 77, text: "So can I call you tonight?" },
+  { time: 80, text: "I'm trying to make up my mind" },
+  { time: 84, text: "Just how I feel" },
+  { time: 88, text: "Could you tell me what's real?" },
+  { time: 92, text: "I hear your voice on the phone" },
+  { time: 96, text: "Now I'm no longer alone" },
+  { time: 100, text: "Just how I feel" },
+  { time: 104, text: "Could you tell me what's real anymore?" },
+  { time: 108, text: "'Cause I wouldn't know" },
+  { time: 112, text: "Voice so low" },
+  { time: 116, text: "Sneaking around, so it goes" },
+  { time: 120, text: "I always try my best to listen" },
+  { time: 124, text: "Picking up things that I can fidget" },
+  { time: 128, text: "Circle speed, pacing around, watching my feet" },
+  { time: 132, text: "Batteries drain, I get the memo" },
+  { time: 136, text: "I think that I might have to let you go" },
+  { time: 140, text: "So can I call you tonight?" },
+  { time: 144, text: "I'm trying to make up my mind" },
+  { time: 148, text: "Just how I feel" },
+  { time: 152, text: "Could you tell me what's real?" },
+  { time: 156, text: "I hear your voice on the phone" },
+  { time: 160, text: "Now I'm no longer alone" },
+  { time: 164, text: "Just how I feel" },
+  { time: 168, text: "Could you tell me what's real anymore?" },
+  { time: 172, text: "'Cause I wouldn't know" },
+  { time: 176, text: "Don't go, don't go so easy" },
+  { time: 180, text: "Don't go, don't go and leave me" },
+  { time: 184, text: "Don't go, don't go so easy" },
+  { time: 188, text: "Don't go, don't go and leave me" },
+  { time: 192, text: "Don't go, don't go so easy" },
+  { time: 196, text: "Don't go, don't go and leave me" },
+  { time: 200, text: "Don't go, don't go so easy" },
+  { time: 204, text: "Don't go, go" },
+  { time: 208, text: "So can I call you tonight?" },
+  { time: 212, text: "I'm trying to make up my mind" },
+  { time: 216, text: "Just how I feel" },
+  { time: 220, text: "Could you tell me what's real?" },
+  { time: 224, text: "I hear your voice on the phone" },
+  { time: 228, text: "Now I'm no longer alone" },
+  { time: 232, text: "Just how I feel" },
+  { time: 236, text: "Could you tell me what's real anymore?" },
+  { time: 240, text: "'Cause I wouldn't know" },
 ];
 
+const audio = document.getElementById("bgMusic");
 const lyricsEl = document.getElementById("lyrics");
-const music = document.getElementById("music");
-const startBtn = document.getElementById("startBtn");
 
-startBtn.addEventListener("click", () => {
-  music.play();
-  startBtn.style.display = "none";
-});
-
-function updateLyrics() {
-  const currentTime = music.currentTime;
-  let currentLyric = "";
-  for(let i=0;i<lyricsData.length;i++){
-    if(currentTime >= lyricsData[i].time){
-      currentLyric = lyricsData[i].text;
-    } else break;
+function syncLyrics() {
+  const currentTime = audio.currentTime;
+  let currentLine = "";
+  for (let i = 0; i < lyrics.length; i++) {
+    if (currentTime >= lyrics[i].time) {
+      currentLine = lyrics[i].text;
+    }
   }
-  lyricsEl.textContent = currentLyric;
+  lyricsEl.textContent = currentLine;
+  requestAnimationFrame(syncLyrics);
 }
 
-setInterval(updateLyrics, 200);
-
-// Balloons & candles
-function createBalloon() {
-  const balloon = document.createElement("div");
-  balloon.classList.add("balloon");
-  balloon.style.left = Math.random()*window.innerWidth + "px";
-  balloon.style.animationDuration = (5 + Math.random()*5) + "s";
-  balloon.style.background = ['#ff9999','#ffcc99','#99ccff','#ffb3ff'][Math.floor(Math.random()*4)];
-  document.body.appendChild(balloon);
-  setTimeout(()=>document.body.removeChild(balloon), 10000);
-}
-
-function createCandle() {
-  const candle = document.createElement("div");
-  candle.classList.add("candle");
-  candle.style.left = Math.random()*window.innerWidth + "px";
-  candle.style.animationDuration = (4 + Math.random()*4) + "s";
-  document.body.appendChild(candle);
-  setTimeout(()=>document.body.removeChild(candle), 8000);
-}
-
-setInterval(createBalloon, 800);
-setInterval(createCandle, 2000);
-
-// Sparkle particle following mouse
-const canvas = document.getElementById("sparkleCanvas");
+// ===== Particle & sparkle effects =====
+const canvas = document.getElementById("particleCanvas");
 const ctx = canvas.getContext("2d");
 canvas.width = window.innerWidth;
 canvas.height = window.innerHeight;
 let particles = [];
 
-window.addEventListener('resize', () => {
+function random(min,max){return Math.random()*(max-min)+min;}
+
+class Particle {
+  constructor(x,y,type){
+    this.x=x; this.y=y; this.type=type;
+    this.size=random(5,15);
+    this.speedY=type==='balloon'?random(-0.3,-1):random(-1.5,-3);
+    this.speedX=random(-1,1);
+    this.opacity=1;
+    this.color = type==='heart'? '#ff6b6b': type==='confetti'? `hsl(${random(0,360)},80%,60%)`: type==='balloon'?'#ff9f1c':'#caf0f8';
+  }
+  update(){
+    this.y += this.speedY;
+    this.x += this.speedX;
+    if(this.type==='balloon'){ this.y+= this.speedY/2; } // floating slow
+    this.opacity -= (this.type==='balloon'?0.001:0.01);
+    if(this.opacity<0) this.opacity=0;
+  }
+  draw(){
+    ctx.globalAlpha=this.opacity;
+    if(this.type==='heart'){
+      ctx.fillStyle=this.color;
+      ctx.beginPath();
+      ctx.moveTo(this.x,this.y);
+      ctx.bezierCurveTo(this.x,this.y-this.size/2,this.x-this.size,this.y-this.size/2,this.x-this.size,this.y);
+      ctx.bezierCurveTo(this.x-this.size,this.y+this.size/2,this.x,this.y+this.size/1.5,this.x,this.y+this.size);
+      ctx.bezierCurveTo(this.x,this.y+this.size/1.5,this.x+this.size,this.y+this.size/2,this.x+this.size,this.y);
+      ctx.bezierCurveTo(this.x+this.size,this.y-this.size/2,this.x,this.y-this.size/2,this.x,this.y);
+      ctx.fill();
+    } else {
+      ctx.fillStyle=this.color;
+      ctx.beginPath();
+      ctx.arc(this.x,this.y,this.size,0,Math.PI*2);
+      ctx.fill();
+    }
+    ctx.globalAlpha=1;
+  }
+}
+
+function animate(){
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+
+  // Add floating birthday balloons
+  if(Math.random()<0.02){
+    particles.push(new Particle(random(0,canvas.width),canvas.height+20,'balloon'));
+  }
+
+  for(let i=particles.length-1;i>=0;i--){
+    particles[i].update();
+    particles[i].draw();
+    if(particles[i].opacity<=0) particles.splice(i,1);
+  }
+  requestAnimationFrame(animate);
+}
+animate();
+
+// Mouse sparkle / confetti / hearts
+window.addEventListener('mousemove', function(e){
+  for(let i=0;i<3;i++){
+    particles.push(new Particle(e.clientX+random(-10,10),e.clientY+random(-10,10),'heart'));
+    particles.push(new Particle(e.clientX+random(-10,10),e.clientY+random(-10,10),'confetti'));
+  }
+});
+
+// Resize canvas
+window.addEventListener('resize', function(){
   canvas.width = window.innerWidth;
   canvas.height = window.innerHeight;
 });
 
-window.addEventListener('mousemove', (e) => {
-  for(let i=0;i<2;i++){
-    particles.push({
-      x: e.clientX,
-      y: e.clientY,
-      vx: (Math.random()-0.5)*2,
-      vy: (Math.random()-0.5)*2,
-      size: Math.random()*3+1,
-      alpha: 1
-    });
-  }
+// ===== Click to start music =====
+const startOverlay = document.getElementById("startOverlay");
+startOverlay.addEventListener('click', ()=>{
+  audio.play();
+  typeMessage();
+  syncLyrics();
+  startOverlay.style.display = 'none';
 });
-
-function animate() {
-  ctx.clearRect(0,0,canvas.width,canvas.height);
-  for(let i=0;i<particles.length;i++){
-    let p = particles[i];
-    p.x += p.vx;
-    p.y += p.vy;
-    p.alpha -= 0.01;
-    ctx.fillStyle = `rgba(255,255,255,${p.alpha})`;
-    ctx.beginPath();
-    ctx.arc(p.x,p.y,p.size,0,Math.PI*2);
-    ctx.fill();
-    if(p.alpha<=0){
-      particles.splice(i,1);
-      i--;
-    }
-  }
-  requestAnimationFrame(animate);
-}
-
-animate();
 </script>
 
 </body>
