--- a/foryou.html
+++ b/foryou.html
@@ -8,10 +8,9 @@
   body {
     margin: 0;
     padding: 0;
-    background: linear-gradient(to bottom, #a8dadc, #caf0f8); /* biru lembut */
+    background: linear-gradient(to bottom, #a8dadc, #caf0f8);
     font-family: 'Comic Sans MS', cursive, sans-serif;
     overflow: hidden;
-    color: #1d3557;
     cursor: pointer;
   }
   #message {
@@ -20,9 +19,15 @@
     width: 100%;
     text-align: center;
     font-size: 2em;
-    color: #1d3557;
+    font-weight: bold;
     text-shadow: 1px 1px 5px #fff;
     pointer-events: none;
+    animation: colorFade 5s infinite alternate;
+  }
+  @keyframes colorFade {
+    0% { color: #1d3557; }
+    50% { color: #457b9d; }
+    100% { color: #1d3557; }
   }
   #lyrics {
     position: fixed;
@@ -137,9 +142,7 @@ function syncLyrics() {
   const currentTime = audio.currentTime;
   let currentLine = "";
   for (let i = 0; i < lyrics.length; i++) {
-    if (currentTime >= lyrics[i].time) {
-      currentLine = lyrics[i].text;
-    }
+    if (currentTime >= lyrics[i].time) currentLine = lyrics[i].text;
   }
   lyricsEl.textContent = currentLine;
   requestAnimationFrame(syncLyrics);
@@ -158,16 +161,18 @@ class Particle {
   constructor(x,y,type){
     this.x=x; this.y=y; this.type=type;
     this.size=random(5,15);
-    this.speedY=type==='balloon'?random(-0.3,-1):random(-1.5,-3);
+    this.speedY=type==='balloon'?random(-0.2,-0.8):random(-1,-3);
     this.speedX=random(-1,1);
     this.opacity=1;
     this.color = type==='heart'? '#ff6b6b': type==='confetti'? `hsl(${random(0,360)},80%,60%)`: type==='balloon'?'#ff9f1c':'#caf0f8';
+    this.life = 0;
   }
   update(){
     this.y += this.speedY;
     this.x += this.speedX;
-    if(this.type==='balloon'){ this.y+= this.speedY/2; } // floating slow
+    if(this.type==='balloon'){ this.y+= Math.sin(this.life/20)*0.5; } // lilin floating
     this.opacity -= (this.type==='balloon'?0.001:0.01);
+    this.life++;
     if(this.opacity<0) this.opacity=0;
   }
   draw(){
@@ -194,7 +199,7 @@ class Particle {
 function animate(){
   ctx.clearRect(0,0,canvas.width,canvas.height);
 
-  // Add floating birthday balloons
+  // floating balloons randomly
   if(Math.random()<0.02){
     particles.push(new Particle(random(0,canvas.width),canvas.height+20,'balloon'));
   }
@@ -208,21 +213,21 @@ function animate(){
 }
 animate();
 
-// Mouse sparkle / confetti / hearts
+// mouse sparkle / heart / confetti
 window.addEventListener('mousemove', function(e){
-  for(let i=0;i<3;i++){
+  for(let i=0;i<4;i++){
     particles.push(new Particle(e.clientX+random(-10,10),e.clientY+random(-10,10),'heart'));
     particles.push(new Particle(e.clientX+random(-10,10),e.clientY+random(-10,10),'confetti'));
   }
 });
 
-// Resize canvas
+// resize canvas
 window.addEventListener('resize', function(){
   canvas.width = window.innerWidth;
   canvas.height = window.innerHeight;
 });
 
-// ===== Click to start music =====
+// click to start music
 const startOverlay = document.getElementById("startOverlay");
 startOverlay.addEventListener('click', ()=>{
   audio.play();
