--- a/foryou.html
+++ b/foryou.html
@@ -8,7 +8,7 @@
   body {
     margin: 0;
     padding: 0;
-    background: linear-gradient(to bottom, #a8dadc, #caf0f8);
+    background: linear-gradient(to bottom, #a8dadc, #caf0f8); /* biru lembut */
     font-family: 'Comic Sans MS', cursive, sans-serif;
     overflow: hidden;
     cursor: pointer;
@@ -31,7 +31,7 @@
   }
   #lyrics {
     position: fixed;
-    top: 50%;
+    top: 55%;
     width: 100%;
     text-align: center;
     font-size: 1.5em;
@@ -160,18 +160,18 @@ function random(min,max){return Math.random()*(max-min)+min;}
 class Particle {
   constructor(x,y,type){
     this.x=x; this.y=y; this.type=type;
-    this.size=random(5,15);
-    this.speedY=type==='balloon'?random(-0.2,-0.8):random(-1,-3);
+    this.size=random(5,18);
+    this.speedY=type==='balloon'?random(-0.2,-0.7):random(-1.2,-3.2);
     this.speedX=random(-1,1);
     this.opacity=1;
-    this.color = type==='heart'? '#ff6b6b': type==='confetti'? `hsl(${random(0,360)},80%,60%)`: type==='balloon'?'#ff9f1c':'#caf0f8';
-    this.life = 0;
+    this.life=0;
+    this.color = type==='heart'? '#ff6b6b': type==='confetti'? `hsl(${random(0,360)},90%,60%)`: type==='balloon'?'#ff9f1c':'#caf0f8';
   }
   update(){
     this.y += this.speedY;
     this.x += this.speedX;
-    if(this.type==='balloon'){ this.y+= Math.sin(this.life/20)*0.5; } // lilin floating
-    this.opacity -= (this.type==='balloon'?0.001:0.01);
+    if(this.type==='balloon'){ this.y+= Math.sin(this.life/15)*0.5; } // floating motion
+    this.opacity -= (this.type==='balloon'?0.001:0.012);
     this.life++;
     if(this.opacity<0) this.opacity=0;
   }
@@ -200,8 +200,8 @@ function animate(){
   ctx.clearRect(0,0,canvas.width,canvas.height);
 
   // floating balloons randomly
-  if(Math.random()<0.02){
-    particles.push(new Particle(random(0,canvas.width),canvas.height+20,'balloon'));
+  if(Math.random()<0.015){
+    particles.push(new Particle(random(0,canvas.width),canvas.height+30,'balloon'));
   }
 
   for(let i=particles.length-1;i>=0;i--){
@@ -215,9 +215,9 @@ animate();
 
 // mouse sparkle / heart / confetti
 window.addEventListener('mousemove', function(e){
-  for(let i=0;i<4;i++){
-    particles.push(new Particle(e.clientX+random(-10,10),e.clientY+random(-10,10),'heart'));
-    particles.push(new Particle(e.clientX+random(-10,10),e.clientY+random(-10,10),'confetti'));
+  for(let i=0;i<5;i++){
+    particles.push(new Particle(e.clientX+random(-15,15),e.clientY+random(-15,15),'heart'));
+    particles.push(new Particle(e.clientX+random(-15,15),e.clientY+random(-15,15),'confetti'));
   }
 });
 
