--- a/private.html
+++ b/private.html
@@ -6,13 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fail Muat Turun O2024</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
   <style>
-    body {
-      background-color: #f9f9f9;
-    }
-    .hidden {
-      display: none !important;
-    }
+    body { background-color: #f9f9f9; }
+    .hidden { display: none !important; }
   </style>
 </head>
 <body>
@@ -36,16 +33,16 @@
 
       <div class="list-group shadow-sm text-start mx-auto" style="max-width:600px;">
         <a href="o2024/configuration.xml" download class="list-group-item list-group-item-action">
-          <i class="bi bi-file-earmark-pdf text-danger"></i> XML Config in cmd
+          <i class="bi bi-filetype-xml text-danger"></i> XML Config in cmd
         </a>
         <a href="o2024/activation-code-run-in-powershell.txt" download class="list-group-item list-group-item-action">
-          <i class="bi bi-file-earmark-word text-primary"></i>activation powershell
+          <i class="bi bi-terminal text-primary"></i> Activation PowerShell
         </a>
         <a href="o2024/run-configuration-using-this-code-first.txt" download class="list-group-item list-group-item-action">
-          <i class="bi bi-file-earmark-excel text-success"></i> to run XML
+          <i class="bi bi-code-slash text-success"></i> Run XML Command
         </a>
         <a href="o2024/setup.exe" download class="list-group-item list-group-item-action">
-          <i class="bi bi-file-earmark-zip text-warning"></i> setup
+          <i class="bi bi-file-earmark-zip text-warning"></i> Setup Installer
         </a>
       </div>
 
@@ -55,12 +52,15 @@
   </div>
 
   <script>
-    const CORRECT_PASSWORD = "kienon2024"; // 🔑 Tukar password di sini
+    // Hash sebenar bagi 'kienon2024' = 71675337ca0d558c15f36c1c3d85e31d
+    const STORED_HASH = "71675337ca0d558c15f36c1c3d85e31d";
 
     function checkPassword() {
-      const input = document.getElementById("password-input").value;
+      const input = document.getElementById("password-input").value.trim();
+      const hash = CryptoJS.MD5(input).toString();
       const errorMsg = document.getElementById("error-msg");
-      if (input === CORRECT_PASSWORD) {
+
+      if (hash === STORED_HASH) {
         document.getElementById("password-section").classList.add("hidden");
         document.getElementById("download-section").classList.remove("hidden");
         sessionStorage.setItem("auth", "true");
